Menu de navegacion
se agrego el menu de navegacion que lleva hacia elementos internos del archivo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Personal</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="estilo.css">
+
 </head>
 
 <body>
+    <nav class="barra" id="menu">
+        <a href="#menu">Inicio</a>
+        <a href="#contenido">Contenido</a>
+        <a href="#final">Final</a>
+    </nav>
+
+    
+    <article id="contenido">
+
+    </article>
+     
+
+    <footer id="final">
+        <p class="mio">Hecho por Diego Emilio Ruiz Navarro ©</p>
+    </footer>
 </body>
+
+
+
 
 
 </html>
