se agrego la seccion de hobby y de tema de interes

--- a/index.html
+++ b/index.html
@@ -34,16 +34,26 @@
 
     
     <aside id="aside">
-
     </aside>
 
     <article id="hobby" class="a" >
         <div>
+            <img src="images/control.jpg" class="tipo1">
+            <h1>Hobbies</h1>
+            <p>Mi hobby al cual le doy demasiado de mi tiempo serian los video juegos, de los que mas juego son lol, 
+                hearthstone y world of warcraft. tambien me gusta escuchar musica mientras juego, hago tareas,
+                otro hobby al que le dedico mucho tiempo es ver streams en twitch, cuando trabajo o necesito concentrarme necesito estar escuhcando algo de fondo, 
+                la mayoria del tiempo no presto atencion a lo que dice la cancion o de lo que hablan en el stream, basicamnete necesito escuchar algo en mis audifonos para concentrarme.  
+            </p>
         </div>
     </article>
 
     <article id="tema" class="a">
         <div>
+            <img src="images/viko.png" class="tipo1">
+            <h1>Mi gato</h1>
+            <p>El es mi gato viko, tiene 7 años, la mator parte del tiempo se la pasa dormido en mi en la esquina de mi cama.
+            </p>
         </div>
     </article>
 
